--- a/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
+++ b/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Attributes\InjectedProperty.cs" />
     <Compile Include="Core\IoC.cs" />
+    <Compile Include="Core\IoC_.cs" />
     <Compile Include="Core\RegistredObject.cs" />
     <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="Helpers\StaticHelper.cs" />
