--- a/trunk/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
+++ b/trunk/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Core\IoC_.cs" />
     <Compile Include="Core\RegistredObject.cs" />
     <Compile Include="Extensions\DictionaryExtensions.cs" />
+    <Compile Include="Helpers\IoCManager.cs" />
     <Compile Include="Helpers\StaticHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stores\FileStore.cs" />
