--- a/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
+++ b/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
@@ -49,13 +49,11 @@
     <Compile Include="Helpers\IoCManager.cs" />
     <Compile Include="Helpers\StaticHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stores\FileStore.cs" />
-    <Compile Include="Stores\IFileStore.cs" />
+    <Compile Include="Stores\Impl\FileStore.cs" />
+    <Compile Include="Stores\AFileStore.cs" />
     <Compile Include="Stores\IReadStore.cs" />
     <Compile Include="Stores\IStore.cs" />
-    <Compile Include="Stores\IXMLStore.cs" />
-    <Compile Include="Stores\StoreBase.cs" />
-    <Compile Include="Stores\XMLStore.cs" />
+    <Compile Include="Stores\Impl\XMLStore.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,7 +74,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\UseAbilities.XML\UseAbilities.XML.csproj">
+      <Project>{F4863115-63AF-4DBC-A8EE-9771426DAEB0}</Project>
+      <Name>UseAbilities.XML</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
