--- a/trunk/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
+++ b/trunk/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
@@ -49,11 +49,12 @@
     <Compile Include="Helpers\IoCManager.cs" />
     <Compile Include="Helpers\StaticHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stores\Impl\FileStore.cs" />
-    <Compile Include="Stores\AFileStore.cs" />
+    <Compile Include="Stores\ByteFileStoreBase.cs" />
+    <Compile Include="Stores\FileStoreBase.cs" />
+    <Compile Include="Stores\Impl\BytesStore.cs" />
     <Compile Include="Stores\IReadStore.cs" />
     <Compile Include="Stores\IStore.cs" />
-    <Compile Include="Stores\Impl\XMLStore.cs" />
+    <Compile Include="Stores\Impl\XmlStoreBase.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -79,6 +80,9 @@
       <Project>{F4863115-63AF-4DBC-A8EE-9771426DAEB0}</Project>
       <Name>UseAbilities.XML</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Stores\Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
