--- a/trunk/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
+++ b/trunk/UseAbilities/UseAbilities.IoC/UseAbilities.IoC.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Helpers\IoCManager.cs" />
     <Compile Include="Helpers\StaticHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stores\FileStoreBase.cs" />
+    <Compile Include="Stores\AbstractFileStore.cs" />
     <Compile Include="Stores\Impl\BytesStore.cs" />
     <Compile Include="Stores\IReadStore.cs" />
     <Compile Include="Stores\IStore.cs" />
